<resources>
    <string name="app_name">Crispy</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fui_name_hint">Your name</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="all_recipies">ALL RECIPIES</string>
    <string name="prepares">Cooks:</string>
    <string name="time">Time:</string>
    <string name="mealDate">Choose the day</string>
    <string name="mealTime">Choose the time</string>
    <string name="person">Person:</string>
    <string name="date">Date</string>
    <string name="setDate">SET DATE</string>
    <string name="setTime">SET TIME</string>
    <string name="who_cooks">Who cooks?</string>
    <string name="meal_time">Meal time:</string>
    <string name="assign_to">Assign to:</string>
    <string name="change">change</string>
    <string name="list">List</string>
    <string name="crispy_planner" translatable="false">Crispy Planner</string>
    <string name="recipies">Recipies</string>
    <string name="add_meal">Add meal</string>
    <string name="add_meal_is_in_past_error">Focus on future, not the past! Change the time of a meal.</string>
    <string name="add_meal_save_success">Meal was saved!</string>
    <string name="add_meal_update_success">Meal was updated!</string>
    <string name="meal_name">Choose recipy:</string>
    <string name="ingredients">Ingredients</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="add_description">Add your description</string>
    <string name="delete">Delete</string>
    <string name="delete_meal_message">Meal was deleted!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="channel_name" translatable="false">Channel Name</string>
    <string name="channel_description" translatable="false">Channel Description</string>
    <string name="notification_title" translatable="false">Check your plan for today!</string>
    <string name="notification_text" translatable="false">Make sure not to miss today\'s dinner!</string>
    <string name="kg" translatable="false">kg</string>
    <string name="g" translatable="false">g</string>
    <string name="l" translatable="false">l</string>
    <string name="ml" translatable="false">ml</string>
    <string name="pc">pc</string>
    <string name="recipe_detail_title">Recipe detail</string>
    <string name="recipe_edit_title">Edit recipe</string>
    <string name="edit_meal">Edit meal</string>
    <string name="meal_day">Meal date:</string>
    <string name="title">Title</string>
    <string name="recipe_name">Add recipe name</string>
    <string name="recipe_saved_msg">Recipe saved!</string>
    <string name="recipe_deleted_msg">Recipe deleted!</string>
    <string name="empty_ingredient_msg">Fill information about ingredients!</string>
    <string name="empty_title_msg">Fill recipe title!</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="sign_out">Sign out</string>
    <string name="account">Your account</string>
    <string name="delete_account">Delete account</string>
    <string name="hi">Hi</string>
    <string name="more">more</string>
    <string name="at">at</string>
    <string name="delete_account_message">Your account will be permanently deleted and you will get signed out.</string>
    <string name="delete_account_dialog_title">Delete account?</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="unknown_error">Unknown error.</string>
</resources>
