<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addplannedmeal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crispyLightAccent"
    tools:context=".ui.mealsPlan.addPlannedMeal.AddPlannedMealFragment">

    <TextView
        android:id="@+id/meal_date_headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/meal_time"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mealTime"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/meal_date_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/meal_day"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mealDate"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/recipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/whoPrepares"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSave"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/whoPrepares"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:scrollbarSize="16dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btnDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeName"
        tools:scrollbarSize="16dp" />

    <TextView
        android:id="@+id/mealDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="3dp"
        android:text="@string/date"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnDate"
        app:layout_constraintVertical_bias="0.517" />

    <TextView
        android:id="@+id/mealTime"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="32dp"
        android:text="@string/time"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnTime" />

    <Button
        android:id="@+id/btnDate"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/change"
        app:layout_constraintBottom_toTopOf="@+id/btnTime"
        app:layout_constraintStart_toEndOf="@+id/mealDate"
        app:layout_constraintTop_toBottomOf="@+id/whoPrepares" />

    <Button
        android:id="@+id/btnTime"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/change"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintStart_toEndOf="@+id/mealTime"
        app:layout_constraintTop_toBottomOf="@+id/btnDate" />

    <TextView
        android:id="@+id/meal_whocooks_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/who_cooks"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/whoPrepares"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/meal_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recipeName"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/delete"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
